--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "styled-components": "^6.0.0-rc.1"
+    "styled-components": "^6.0.0-rc.1",
+    "gsap": "^3.11.5",
+    "three": "^0.152.2",
+    "three-orbit-controls": "^82.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
@@ -22,6 +25,8 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "@types/dat.gui": "^0.7.7",
+    "dat.gui": "^0.7.9"
   }
 }
